# dzo

./: .gitignore  README.md
convolution/: CMakeLists.txt  README.md
convolution/include/: convolution_operator.hpp  file_not_found.hpp  fs.hpp  mask.hpp
convolution/masks/: m1.mask  m2.mask  m3.mask  m4.mask
convolution/src/: convolution_operator.cpp  file_not_found.cpp  fs.cpp  main.cpp  mask.cpp
fourier_transform/: .gitignore  CMakeLists.txt  README.md
fourier_transform/include/: fft.hpp  fs.hpp  img_transform.hpp  matrix.hpp  sft.hpp  util.hpp
fourier_transform/src/: fft.cpp  img_transform.cpp  main.cpp  sft.cpp  util.cpp
img_rotation/: .gitignore  CMakeLists.txt  README.md
img_rotation/include/: distortion_correction.hpp  image_rotation.hpp  image_scaling.hpp  pixel_approximation.hpp  util.hpp
img_rotation/src/: distortion_correction.cpp  image_rotation.cpp  image_scaling.cpp  main.cpp  pixel_approximation.cpp  util.cpp
